<tr-components> modify font system and add _reset.scss(reset browsers css settings)

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,7 @@
-// 变量文件
+// variables file
 
-// 基础色彩系统
-// 中性色
+// Basic color system
+// neutral colour
 $white: #fff !default;
 $gray-01: #f7f8fa !default;
 $gray-02: #f2f3f5 !default;
@@ -14,7 +14,7 @@ $gray-08: #4e5969 !default;
 $gray-09: #272e3b !default;
 $gray-10: #1d2129 !default;
 $black: #000 !default;
-// 基础色
+// basic color
 $red: #f53f3f !default;
 $orange-red: #f77234 !default;
 $orange: #ff7d00 !default;
@@ -29,7 +29,7 @@ $purple: #722ed1 !default;
 $pink-purple: #d91ad9 !default;
 $magenta: #f5319d !default;
 $gray: #86909c !default;
-// 系统色
+// system color
 $primary: $blue !default;
 $secondary: $gray !default;
 $success: $green !default;
@@ -39,43 +39,100 @@ $danger: $red !default;
 $light: $gray-01 !default;
 $dark: $gray-10 !default;
 
-// 字体系统
-// 字体类型
+// Font system
+// font family
 $font-family-sans-serif: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
   'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
   'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji' !default;
 $font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
   'Liberation Mono', 'Courier New', monospace !default;
 $font-family-base: $font-family-sans-serif !default;
-// 字体大小
+// font size
 $font-size-base: 1rem !default; // assumes the browser default, typically '16px'
 $font-size-large: $font-size-base * 1.25 !default;
 $font-size-small: $font-size-base * 0.875 !default;
 $font-size-root: null !default;
-// 字重
+// font weight
 $font-weight-lighter: lighter !default;
 $font-weight-light: 300 !default;
 $font-weight-normal: 400 !default;
 $font-weight-bold: 700 !default;
 $font-weight-bolder: bolder !default;
 $font-weight-base: $font-weight-normal !default;
-// 行高
+// line height
 $line-height-base: 1.5 !default;
 $line-height-large: 2 !default;
 $line-height-small: 1.25 !default;
-// 标题大小
+// heading font size
 $h1-font-size: $font-size-base * 2.5 !default;
 $h2-font-size: $font-size-base * 2 !default;
 $h3-font-size: $font-size-base * 1.75 !default;
 $h4-font-size: $font-size-base * 1.5 !default;
 $h5-font-size: $font-size-base * 1.25 !default;
 $h6-font-size: $font-size-base !default;
-// 链接相关
+// link
 $link-color: $primary !default;
 $link-decoration: none !default;
 $link-hover-color: darken($link-color, 15%) !default;
 $link-hover-decoration: underline !default;
-// body相关
+// body
 $body-background-color: $white !default;
 $body-color: $gray-10 !default;
 $body-text-align: null !default;
+// spacing
+$spacer: 1rem !default;
+// hr
+$hr-color: inherit !default;
+$hr-height: 1px !default;
+$hr-opacity: 0.25 !default;
+$hr-margin-y: $spacer !default;
+// heading
+$headings-margin-bottom: $spacer / 2 !default;
+$headings-font-family: null !default;
+$headings-font-style: null !default;
+$headings-font-weight: 500 !default;
+$headings-line-height: 1.2 !default;
+$headings-color: null !default;
+// paragraph
+$paragraph-margin-bottom: 1rem !default;
+// other font settings
+$dt-font-weight: $font-weight-bold !default;
+$small-font-size: 0.875em !default;
+$sub-sup-font-size: 0.75em !default;
+$text-muted: $gray !default;
+$nested-kbd-font-weight: $font-weight-bold !default;
+$initialism-font-size: $small-font-size !default;
+$list-inline-padding: 0.5rem !default;
+$lead-font-size: $font-size-base * 1.25 !default;
+$lead-font-weight: 300 !default;
+// code
+$code-font-size: $small-font-size !default;
+$code-color: $gold !default;
+$pre-color: null !default;
+// legend
+$legend-margin-bottom: 0.5rem !default;
+$legend-font-size: 1.5rem !default;
+$legend-font-weight: null !default;
+// mark
+$mark-padding: 0.2em !default;
+$mark-background-color: #fcf8e3 !default;
+// blockquote
+$blockquote-small-color: $gray !default;
+$blockquote-small-font-size: $small-font-size !default;
+$blockquote-font-size: $font-size-base * 1.25 !default;
+
+// Options
+$enable-pointer-cursor-for-buttons: true !default;
+
+// Display
+// display size
+$display1-size: 6rem !default;
+$display2-size: 5.5rem !default;
+$display3-size: 4.5rem !default;
+$display4-size: 3.5rem !default;
+// display weight
+$display1-weight: 300 !default;
+$display2-weight: 300 !default;
+$display3-weight: 300 !default;
+$display4-weight: 300 !default;
+$display-line-height: $headings-line-height !default;
